added additional content for resume site

--- a/grumpyCatResume/index.html
+++ b/grumpyCatResume/index.html
@@ -4,6 +4,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Grumpy Cat</h1>    
+    <h1>Grumpy Cat</h1>  
+    <img src="https://ewscripps.brightspotcdn.com/dims4/default/ba0a726/2147483647/strip/true/crop/640x360+0+34/resize/1280x720!/quality/90/?url=https%3A%2F%2Fmediaassets.kgun9.com%2Fphoto%2F2018%2F01%2F25%2FGettyImages-519250942_1516901266083_76529695_ver1.0_640_480.jpg"
+    <br>
+    <h3>Past Work Experience</h3>
+        <ul>
+            <li>Head Chef</li>
+            <li>Police Officer</li>
+            <li>Baseball Coach</li>
+        </ul>
+    <h3>Check Me Out!</h3> 
+        <a href="Nothing">pretend link here</a>
 </body>
+
 </html>
