--- a/grumpyCatResume/index.html
+++ b/grumpyCatResume/index.html
@@ -15,7 +15,11 @@
             <li>Baseball Coach</li>
         </ul>
     <h3>Check Me Out!</h3> 
-        <a href="Nothing">pretend link here</a>
-</body>
+        <a href="Nothing">Twitter</a>
+        <a href="Nothing2">LinkedIn</a>
+        <a href="file:///Users/lydiamoore/Desktop/Lydia-Moore-seir-flex-homework/grumpyCatResume/index.html">Home Page</a>
+        <a href="projects.html">Projects</a>
+    </body>
+
 
 </html>
