--- a/unit1/landscaper/index.html
+++ b/unit1/landscaper/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header><nav></nav></header>
-    <main><h1>Hello World</h1></main>
+    <main><h1>Lydia's Landscaping Company</h1></main>
     <footer></footer>
 </body>
 </html>
