--- a/unit1/week_5/hogwarts/index.html
+++ b/unit1/week_5/hogwarts/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header><nav></nav></header>
-    <main><h1>Hello World</h1></main>
+    <h1>Hello World</h1>
     <footer></footer>
 <script src="app.js"></script>    
 </body>
