--- a/unit1/week_5/hogwarts/index.html
+++ b/unit1/week_5/hogwarts/index.html
@@ -14,6 +14,7 @@
 <body>
     <header><nav></nav></header>
     <h1>Hello World</h1>
+    <div id = "container"></div>
     <footer></footer>
 <script src="app.js"></script>    
 </body>
