Chapter 2 complete - Made the Hobbits

--- a/unit1/week_6/Lord of the rings/index.html
+++ b/unit1/week_6/Lord of the rings/index.html
@@ -30,6 +30,6 @@
   </div>
 
 </body>
-<!-- <audio id="" src="./media/hobbit_theme.mp3" autoplay </audio> -->
+<!-- <audio id="" src="hobbit_theme.mp3" autoplay </audio> -->
 
 </html>
